# dataspoke-baseline

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/agents/: api-spec.md  backend.md  frontend.md  k8s-helm.md  test.md  workflow.md
.claude/commands/: dataspoke-plan-write.md
.claude/hooks/: auto-format.sh
.claude/skills/datahub-api/: SKILL.md
.claude/skills/dev-env/: SKILL.md
.claude/skills/dev-env-install/: SKILL.md
.claude/skills/dev-env-uninstall/: SKILL.md
.claude/skills/k8s-work/: SKILL.md  reference.md  troubleshooting.md
.claude/skills/plan-doc/: SKILL.md
.claude/skills/prauto-check-status/: SKILL.md  status.sh
.claude/skills/prauto-run-heartbeat/: SKILL.md  preflight.sh
.claude/skills/ref-setup/: SKILL.md
.claude/skills/spec-to-bulk-issue/: SKILL.md  register-issues.sh
.claude/skills/sync-spec-from-impl/: SKILL.md
.claude/skills/sync-spec-to-impl/: SKILL.md
.claude/skills/sync-specs/: SKILL.md
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: prauto-task.yml
.prauto/: README.md  config.env  config.local.env.example  heartbeat.sh
.prauto/lib/: claude.sh  git-ops.sh  helpers.sh  issues.sh  phases.sh  pr.sh  quota.sh  state.sh
.prauto/prompts/: feedback-response.md  implementation.md  integration-fix.md  issue-analysis.md  pr-review.md  squash-commit.md
api/: openapi.yaml
dev_env/: .env.example  README.md  datahub-port-forward.sh  dataspoke-port-forward.sh  dummy-data-ingest.sh  dummy-data-port-forward.sh  dummy-data-reset.sh  install.sh
dev_env/datahub/: prerequisites-values.yaml  values.yaml
dev_env/dataspoke-example/: install.sh
dev_env/dataspoke-example/manifests/: kafka.yaml
dev_env/dataspoke-infra/: install.sh
dev_env/dummy-data/datahub/: ingest.py
docker-images/api/: Dockerfile
helm-charts/dataspoke/: values-dev.yaml  values.yaml
helm-charts/dataspoke/templates/: configmap.yaml  secrets.yaml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_dimension_details.py
spec/: AI_PRAUTO.md  AI_SCAFFOLD.md  ARCHITECTURE.md  DATAHUB_INTEGRATION.md  MANIFESTO_en.md  MANIFESTO_kr.md  TESTING.md  USE_CASE_en.md  USE_CASE_kr.md
spec/feature/: API.md  BACKEND.md  BACKEND_SCHEMA.md  DEV_ENV.md  FRONTEND_BASIC.md  FRONTEND_DA.md  FRONTEND_DE.md  FRONTEND_DG.md  HELM_CHART.md
src/api/: README.md  config.py  dependencies.py  main.py  pyproject.toml
src/api/auth/: dependencies.py  jwt.py  ws.py
src/api/middleware/: logging.py  rate_limit.py
src/api/routers/: auth.py  health.py  hub.py
src/api/routers/spoke/common/: data.py  gen.py  ingestion.py  ontology.py  search.py  validation.py
src/api/routers/spoke/dg/: metrics.py  overview.py
src/api/schemas/: __init__.py  auth.py  common.py  dataset.py  events.py  generation.py  ingestion.py  metrics.py  ontology.py  overview.py  search.py  validation.py
src/backend/dataset/: service.py
src/backend/generation/: analyzer.py  service.py
src/backend/ingestion/: extractors.py  service.py
src/backend/metrics/: aggregator.py  service.py
src/backend/ontology/: service.py
src/backend/overview/: service.py
src/backend/search/: embedding.py  service.py
src/backend/validation/: anomaly.py  scoring.py  service.py  sla.py
src/shared/: config.py  exceptions.py  pyproject.toml
src/shared/cache/: client.py
src/shared/datahub/: client.py  consumer.py  events.py
src/shared/db/: models.py  session.py
src/shared/llm/: client.py
src/shared/models/: __init__.py  dataset.py  events.py  ontology.py  quality.py
src/shared/notifications/: __init__.py  config.py  models.py  service.py
src/shared/vector/: client.py
src/workflows/: _common.py  embedding_sync.py  generation.py  ingestion.py  metrics.py  ontology.py  sla_monitor.py  validation.py  worker.py
tests/integration/: conftest.py  test_alembic_migration_integration.py  test_dataset_service_integration.py  test_generation_service_integration.py  test_hub_proxy_integration.py  test_infra_clients_integration.py  test_ingestion_service_integration.py  test_kafka_consumer_integration.py  test_metrics_service_integration.py  test_ontology_service_integration.py  test_overview_service_integration.py  test_response_format_integration.py  test_search_service_integration.py  test_temporal_workflows_integration.py  test_validation_service_integration.py  test_ws_feed_integration.py
tests/integration/util/: __init__.py  (+4 more)
tests/unit/: conftest.py
(+71 files in other folders)
