[project]
name = "dataspoke"
version = "0.1.0"
description = "DataSpoke — AI-powered sidecar extension for DataHub"
requires-python = "==3.13.*"
dependencies = [
    # API layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "PyJWT>=2.10",
    "passlib[bcrypt]>=1.7",
    "slowapi>=0.1.9",
    "structlog>=24",
    # Shared / data layer
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Infrastructure clients
    "aiosmtplib>=3.0",
    "acryl-datahub>=0.14,<1.0",
    "redis[hiredis]>=5.2",
    "qdrant-client>=1.12",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2",
    "langchain-anthropic>=0.3",
    # Ingestion extractors
    "httpx>=0.28",
    "sqlparse>=0.5",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "mypy>=1.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
