[project]
name = "dataspoke-shared"
version = "0.1.0"
description = "DataSpoke shared domain models, exceptions, and constants"
requires-python = "==3.13.*"
dependencies = [
    "pydantic>=2.10",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "acryl-datahub>=0.14",
    "redis[hiredis]>=5.0",
    "qdrant-client>=1.12",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "confluent-kafka>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.14",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["../../tests/unit/shared"]
